--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@ ul li strong {
     left: 0;
     width: 100%;
     height: 100%;
-    border: 0; /* Removes any default borders */
+    border: 0;
 }
 
 /* Footer */
